<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.cis2237.bingp4.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"
            android:text="@string/frequent_flier_miles_status"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/rewards_rules_are_available_in_the_action_bar_menu"
            android:id="@+id/txtMessage"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold" />

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2" >

            <TextView
                android:id="@+id/lblName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/name"
                android:layout_marginTop="10dp"
                android:layout_gravity="left" />


            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:layout_gravity="left" />
 
            <TextView
                android:id="@+id/lblAirline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/airline"
                android:layout_marginTop="10dp"
                android:layout_gravity="left" />


            <TextView
                android:id="@+id/txtAirline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:layout_gravity="left" />
                

            <TextView
                android:id="@+id/lblMilesAccumulated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/miles"
                android:layout_marginTop="10dp"
                android:layout_gravity="left" />

            <TextView
                android:id="@+id/txtMilesAccumulated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:layout_gravity="left" />

            <TextView
                android:id="@+id/lblStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/status"
                android:layout_marginTop="10dp"
                android:layout_gravity="left" />

            <TextView
                android:id="@+id/txtStatus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:textSize="18sp"
                android:layout_gravity="left" />


        </GridLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="230dp"
            android:id="@+id/imgReward" />

        <Button
            android:id="@+id/btnRedeemRewards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/press_to_redeem_rewards" />

        <TextView
            android:id="@+id/txtMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Rewards Rules are available in the Action Bar Menu"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>
</ScrollView>